# plaid-payments-demo

./: README  app.json  package-lock.json
app/: app.json  eas.json  metro.config.js  package.json
app/scripts/: setup.sh
app/src/: App.tsx
app/src/screens/: Home.tsx  Plaid.tsx
pkg/plaid_backend/: Cargo.toml
