[package]
name = "plaid_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
uuid = "1.10.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2", "serde_json"] }
